# autowall

./: .gitignore  Cargo.toml  README.md  autowall.env.template  setup.sh
scripts/: autowall-cron  place.sh
src/: main.rs
src/lib/: download.rs  mod.rs  place.rs  utils.rs
src/lib/unsplash/: integration.rs  mod.rs  schema.rs
