[package]
name = "autowall"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"]}
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
chrono = "0.4.39"
